# tycho-indexer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Readme.md  buf.gen.yaml  check.sh  clippy.toml  docker-build.sh  docker-compose.yaml  extractors.yaml  postgres.Dockerfile  release.config.js  rust-toolchain.toml  rustc-ice-2024-01-25T13_26_41-73541.txt  rustc-ice-2024-01-25T13_26_41-73542.txt  rustfmt.toml  signed_spkg_url.sh  stable-build.sh  wait-for-postgres.sh
substreams/ethereum-ambient/: Cargo.toml  substreams.yaml
substreams/ethereum-ambient/proto/: buf.yaml  storage_diff.proto
substreams/ethereum-ambient/src/: lib.rs  utils.rs
substreams/ethereum-ambient/src/contracts/: main.rs  micropaths.rs  warmpath.rs
substreams/ethereum-ambient/src/modules/: 1_map_pool_changes.rs  2_store_pool_balances.rs  3_map_changes.rs
substreams/ethereum-ambient/src/pb/: mod.rs  protosim.evm.state.v1.rs  tycho.evm.state.v1.rs  tycho.evm.v1.rs
substreams/ethereum-uniswap-v2/: Cargo.toml  substreams.yaml
substreams/ethereum-uniswap-v2/proto/v1/: uniswap.proto
substreams/ethereum-uniswap-v2/src/: lib.rs  store_key.rs  traits.rs
substreams/ethereum-uniswap-v2/src/abi/: factory.rs  mod.rs  pool.rs
substreams/ethereum-uniswap-v2/src/modules/: mod.rs  (+5 more)
token-analyzer/: Cargo.toml
token-analyzer/examples/: run-analysis.rs
token-analyzer/src/: contract.rs  http_client.rs  lib.rs  main.rs  token_pre_processor.rs  trace_call.rs  trace_many.rs
tycho-client/: Cargo.toml  README.md  Readme.md  get-tycho.sh
tycho-client-py/: Cargo.toml  README.md  build_wheel.sh  pyproject.toml
tycho-client-py/python/tycho_indexer_client/: __init__.py  dto.py  stream.py
tycho-client-py/src/: main.rs
tycho-client-py/tests/: __init__.py  test_decode.py  test_tycho_rpc_client.py
tycho-client-py/tests/assets/: deltas.json
tycho-client-py/tycho_client/: dto.py  exception.py  rpc_client.py  stream.py
tycho-client-py/tycho_indexer_client/: dto.py  rpc_client.py  stream.py
tycho-client/src/: cli.rs  client.rs  deltas.rs  lib.rs  main.rs  rpc.rs  stream.rs  updates.rs
tycho-client/src/feed/: block_history.rs  component_tracker.rs  mod.rs  synchronizer.rs
tycho-core/: Cargo.toml  README.md
tycho-core/src/: dto.rs  hex_bytes.rs  lib.rs  serde_primitives.rs  storage.rs  traits.rs
tycho-core/src/models/: blockchain.rs  contract.rs  mod.rs  protocol.rs  token.rs
tycho-ethereum/: Cargo.toml  README.md
tycho-ethereum/examples/: run-analysis.rs
tycho-ethereum/src/: ethrpc.rs  lib.rs  trace_call.rs  trace_many.rs
tycho-ethereum/src/account_extractor/: contract.rs
tycho-ethereum/src/token_analyzer/: ethrpc.rs  http_client.rs  mod.rs  rpc_client.rs  trace_call.rs  trace_many.rs
tycho-ethereum/src/token_pre_processor/: mod.rs  token_pre_processor.rs
tycho-indexer/: Cargo.toml  README.md  check.sh  diesel.toml  extractors.yaml
tycho-indexer/examples/: rpc.rs
tycho-indexer/migrations/2023-08-15-154244_tycho_initial_setup/: up.sql
tycho-indexer/migrations/2024-01-10_tycho_patch/: down.sql  up.sql
tycho-indexer/migrations/2024-01-11-195345_protocol_type_unique_name/: down.sql  up.sql
tycho-indexer/migrations/2024-02-16-203155_v0.2.1/: down.sql  up.sql
tycho-indexer/src/: cli.rs  hex_bytes.rs  lib.rs  main.rs  models.rs  ot.rs  serde_helpers.rs  testing.rs
tycho-indexer/src/extractor/: builder.rs  mod.rs  models.rs  protobuf_deserialisation.rs  protocol_cache.rs  protocol_extractor.rs  reorg_buffer.rs  revert_buffer.rs  runner.rs  token_analysis_cron.rs  u256_num.rs
tycho-indexer/src/models/: blockchain.rs  contract.rs  mod.rs  protocol.rs  token.rs
tycho-indexer/src/pb/: mod.rs  pb.rs  sf.codegen.conversation.v1.rs  sf.codegen.conversation.v1.tonic.rs  sf.firehose.v2.rs  sf.firehose.v2.tonic.rs  sf.substreams.internal.v2.rs  sf.substreams.rpc.v2.rs  sf.substreams.rs  sf.substreams.v1.rs  testing.rs  tycho.evm.v1.rs
tycho-indexer/src/services/: cache.rs  deltas_buffer.rs  deserialization_helpers.rs  mod.rs  rpc.rs  ws.rs
tycho-indexer/src/storage/: mod.rs
tycho-indexer/src/substreams/: mod.rs  stream.rs
tycho-indexer/test/data/: testdata.sql
tycho-indexer/test/spkg/: substreams-ethereum-quickstart-v1.0.0.spkg
tycho-storage/: Cargo.toml  README.md  diesel.toml
tycho-storage/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
tycho-storage/migrations/2023-08-15-154244_tycho_initial_setup/: down.sql  up.sql
tycho-storage/migrations/2024-01-10_tycho_patch/: down.sql  up.sql
tycho-storage/migrations/2024-02-16-203155_v0.2.1/: down.sql  up.sql
tycho-storage/migrations/2024-03-16-103329_v0.5.0/: up.sql
tycho-storage/migrations/2024-03-16-103329_v0.6.0/: manual.sql
tycho-storage/migrations/2024-06-06_v0.7.0/: down.sql  up.sql
tycho-storage/migrations/2024-06-21_v0.7.1/: down.sql  up.sql
tycho-storage/migrations/2024-06-25_v0.7.2/: down.sql  up.sql
tycho-storage/migrations/2024-08-1_v0.7.3/: down.sql  up.sql
tycho-storage/migrations/2024-08-30-175610_set_pg_partman_retention/: down.sql  up.sql
tycho-storage/migrations/2024-09-02_transaction_cleanup/: down.sql  up.sql
tycho-storage/migrations/2024-09-06_v0.16.2/: down.sql  up.sql
tycho-storage/migrations/2024-09-16_v0.17.1_reduce_pg_partman_retention/: down.sql  up.sql
tycho-storage/migrations/2024-09-4_v0.15.1/: down.sql  up.sql
tycho-storage/migrations/2025-01-23_account_balances/: down.sql  up.sql
tycho-storage/migrations/2025-02-26_index_token_quality/: down.sql  up.sql
tycho-storage/sql_scripts/: prune_transaction_table.sql  remove_protocol_system.sh  remove_protocol_system.sql
tycho-storage/sql_scripts/repair_faulty_versioning/: protocol_state.sql
tycho-storage/src/: lib.rs
tycho-storage/src/postgres/: builder.rs  cache.rs  chain.rs  contract.rs  contract_state.rs  extraction_state.rs  mod.rs  orm.rs  protocol.rs  schema.patch  schema.rs  versioning.rs
tycho-types/: Cargo.toml
tycho-types/src/: dto.rs  hex_bytes.rs  lib.rs  serde_primitives.rs  storage.rs
tycho-types/src/models/: blockchain.rs  contract.rs  mod.rs  protocol.rs
(+181 files in other folders)
