[workspace]
members = [
    "tycho-indexer",
    "substreams/common", "substreams/substreams-helper", "substreams/ethereum-ambient", "substreams/ethereum-uniswap-v2",
    "tycho-client",
    "tycho-types",
]
resolver = "2"

# profile for building substreams crates
[profile.substreams]
inherits = "release"
lto = true
opt-level = 'z'
strip = "debuginfo"

[workspace.dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0", features = ["rc"] }
strum = "0.25.0"
strum_macros = "0.25.2"
alloy-primitives = { version = "0.6.2", features = ["serde"] }
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
hex = "0.4.3"
tycho-types = { path = "./tycho-types" }
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
thiserror = "1"
tracing = "0.1.37"
hyper = "0.14.27"
async-trait = "0.1.73"
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-tungstenite = "0.20.0"
utoipa = { version = "4.2.0", features = ["chrono"] }
ethers = "^2.0.2"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
substreams = "0.5"
substreams-ethereum = "0.9"
regex = "1.6.0"
prost = "0.11"
prost-types = "0.10.1"
hex-literal = "0.4.1"
ethabi = "18.0.0"
bytes = "1.5.0"
anyhow = "1.0.75"
