[workspace]
members = [
    "tycho-indexer",
    "tycho-client",
    "tycho-client-py",
    "tycho-core",
    "tycho-storage",
    "tycho-ethereum",
]
resolver = "2"

# profile for building substreams crates
[profile.substreams]
inherits = "release"
lto = true
opt-level = 'z'
strip = "debuginfo"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace.dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0", features = ["rc"] }
strum = "0.25.0"
strum_macros = "0.25.2"
alloy-primitives = { version = "0.6.2", features = ["serde"] }
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
hex = "0.4.3"
tycho-core = { path = "tycho-core" }
tycho-storage = { path = "./tycho-storage" }
tycho-ethereum = { path = "./tycho-ethereum", features = ["onchain_data"]}
tycho-client = { path = "./tycho-client" }
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
thiserror = "1"
tracing = "0.1.37"
hyper = "0.14.27"
async-trait = "0.1.73"
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
    "tracing",
] }
console-subscriber = "0.2.0"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
utoipa = { version = "4.2.0", features = ["chrono"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
substreams = "0.5"
substreams-ethereum = "0.9"
regex = "1.6.0"
prost = "0.11"
prost-types = "0.10.1"
hex-literal = "0.4.1"
ethabi = "18.0.0"
bytes = "1.5.0"
anyhow = "1.0.75"
unicode-segmentation = "1.11.0"
clap = "4.4.2"
tracing-appender = "0.2"
reqwest = "0.11"
url = "2"
tracing-opentelemetry = { version = "0.22", default-features = false }
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
