[package]
name = "token-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
hex-literal.workspace = true
hex.workspace = true
regex.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

primitive-types = "0.12"
contracts = { git = "https://github.com/cowprotocol/services", branch = "main" }
rate-limit = { git = "https://github.com/cowprotocol/services", branch = "main" }
ethrpc = { git = "https://github.com/cowprotocol/services", branch = "main" }
ethcontract = { version = "0.25.4", default-features = false, features = [
    "aws-kms",
] }
web3 = { version = "0.19", default-features = false }
mockall = "0.11"
clap = { version = "4", features = ["derive", "env"] }
bigdecimal = "0.3"
cached = { version = "0.44", default-features = false }
derivative = "2"
ethcontract-generate = { version = "0.25", default-features = false }
ethcontract-mock = { version = "0.25", default-features = false }
ethereum-types = "0.14"
futures = "0.3"
gas-estimation = { git = "https://github.com/cowprotocol/gas-estimation", tag = "v0.7.3", features = [
    "web3_",
    "tokio_",
] }
humantime = "2.1.0"
humantime-serde = "1.1.1"
indexmap = "2.2.5"
itertools = "0.11"
lazy_static = "1"
maplit = "1"
num = "0.4"
once_cell = "1"
prometheus = "0.13"
prometheus-metric-storage = "0.5.0"
rand = "0.8"
reqwest = "0.11"
secp256k1 = "0.27"
serde_with = "3"
tracing-subscriber = "0.3"
url = "2"
warp = { git = 'https://github.com/cowprotocol/warp.git', rev = "87a91e2", default-features = false }
