[package]
name = "tycho-client"
version = "0.57.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-client"
path = "src/main.rs"

[dependencies]
tycho-core.workspace = true
reqwest = { version = "0.12.7", features = ["json"] }
futures03.workspace = true
thiserror.workspace = true
tracing.workspace = true
hyper.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
anyhow.workspace = true
lru = "0.12.2"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
clap = { workspace = true, features = ["derive", "env"] }
tracing-appender = { workspace = true }


[dev-dependencies]
mockito = "1.1.1"
rand = "0.8"
rstest = "0.18.2"
pretty_assertions = "1.4.0"
mockall = "0.11.4"
tracing-subscriber = "0.3.17"
test-log = { version = "0.2.14", features = ["trace"] }
