[package]
name = "tycho-client"
version = "0.63.1"
edition = "2021"
description = "A library and CLI tool for querying and accessing liquidity data from Tycho indexer."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-client"
path = "src/main.rs"

[dependencies]
tycho-common.workspace = true
futures03.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing-appender.workspace = true
lru.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { version = "0.12.7", features = ["json"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
hyper = "0.14.27"


[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
rand.workspace = true
mockall.workspace = true
mockito = "1.1.1"
tracing-subscriber = "0.3.17"
test-log = { version = "0.2.14", features = ["trace"] }
