[package]
name = "tycho-core"
version = "0.57.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: eventually remove this dependency, currently used only by hex_bytes.
serde.workspace = true
diesel = { workspace = true, optional = true }
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
utoipa.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
# share with workspace?
typetag = "0.2"
tiny-keccak = {version="2.0.2", features=["keccak"]}
rand = "0.8.5"

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
diesel-async.workspace = true
pretty_assertions = "1.4.0"
maplit = "1.0.2"
rstest = "0.18.2"

[features]
diesel = ["dep:diesel"]

[package.metadata.cargo-machete]
ignored = ["strum"]
