[package]
name = "tycho-core"
version = "0.62.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: eventually remove this dependency, currently used only by hex_bytes.
serde.workspace = true
diesel = { workspace = true, optional = true }
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
utoipa.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
typetag.workspace = true
rand.workspace = true
tiny-keccak = {version="2.0.2", features=["keccak"]}
bytes = "1.5.0"

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
diesel-async.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
maplit = "1.0.2"

[features]
diesel = ["dep:diesel"]

[package.metadata.cargo-machete]
ignored = ["strum"]
