[package]
name = "tycho-ethereum"
version = "0.32.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
tycho-core.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true


ethers = "^2.0.2"
primitive-types = "0.12"
contracts = { git = "https://github.com/cowprotocol/services", rev = "f3678428991e055ceb517f184d1b37244f2d8f51" }
ethrpc = { git = "https://github.com/cowprotocol/services", rev = "f3678428991e055ceb517f184d1b37244f2d8f51" }
ethcontract = { version = "0.25.4", default-features = false, features = [
    "aws-kms",
] }
web3 = { version = "0.19", default-features = false }
mockall = "0.11"
clap = { version = "4", features = ["derive", "env"] }
humantime = "2.1.0"
reqwest.workspace = true
url.workspace = true
