[package]
name = "tycho-ethereum"
version = "0.57.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
tycho-core.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
url.workspace = true

# Required dependencies
ethers = "^2.0.2"
primitive-types = "0.12"
web3 = { version = "0.19", default-features = false }
mockall = "0.11"
unicode-segmentation = "1.12.0"

# Optional dependencies
contracts = { git = "https://github.com/cowprotocol/services", rev = "f3678428991e055ceb517f184d1b37244f2d8f51", optional = true }
ethrpc = { git = "https://github.com/cowprotocol/services", rev = "f3678428991e055ceb517f184d1b37244f2d8f51", optional = true }
ethcontract = { version = "0.25.4", default-features = false, features = [
    "aws-kms",
], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
humantime = { version = "2.1.0", optional = true }

[features]
default = []
onchain_data = ["ethrpc", "ethcontract", "dep:contracts", "humantime", "clap"]
