[package]
name = "tycho-indexer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-indexer"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
hex.workspace = true
futures03.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
ethers.workspace = true
diesel.workspace = true
diesel-async.workspace = true
tycho-core = { workspace = true }
tycho-storage.workspace = true
anyhow.workspace = true
async-stream = "0.3"
reqwest = "0.11"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
once_cell = "1.18.0"
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
hex-literal = "0.4.1"
mockall = "0.11.4"
actix-web-opentelemetry = "0.16.0"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.18.0"
serde_yaml = "0.9.32"
# TODO still required??
typetag = "0.2.16"
utoipa = { version = "4.2.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2.9.0"
actix-test = "0.1.2"
rstest = "0.18.2"
tokio-tungstenite.workspace = true
pretty_assertions = "1.4.0"
test-log = { version = "0.2.14", features = ["trace"] }
