[package]
name = "tycho-indexer"
version = "0.59.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tycho-indexer"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
hex.workspace = true
futures03.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
console-subscriber.workspace = true
diesel-async.workspace = true
tycho-core.workspace = true
tycho-storage.workspace = true
tycho-ethereum.workspace = true
anyhow.workspace = true
reqwest.workspace = true
typetag.workspace = true
mockall.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots", "gzip"] }
prost = "0.11"
prost-types = "0.11"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
once_cell = "1.18.0"
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-web-opentelemetry = "0.16.0"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77"
serde_yaml = "0.9.32"
tracing-opentelemetry = { version = "0.22", default-features = false }
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
utoipa = { version = "4.2.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
mini-moka = "0.10.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"
num_cpus = "1.16.0"
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.2.0" }

[dev-dependencies]
pretty_assertions.workspace = true
tokio-tungstenite.workspace = true
rstest.workspace = true
actix-rt = "2.9.0"
actix-test = "0.1.2"
test-log = { version = "0.2.14", features = ["trace"] }
float_eq = "1.0.1"
