[package]
name = "tycho-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers.workspace = true
serde.workspace = true
diesel = { workspace = true, optional = true }
thiserror.workspace = true
hex.workspace = true
chrono.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true
utoipa.workspace = true

bytes = "1.5.0"

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
diesel-async.workspace = true

[features]
diesel = ["dep:diesel"]
