[package]
name = "substreams-ethereum-ambient"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams_ethereum_ambient"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
hex-literal = "0.4.1"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
