[package]
name = "substreams-ethereum-ambient"
version = "0.3.0"
edition = "2021"

[lib]
name = "substreams_ethereum_ambient"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
hex-literal.workspace = true
ethabi.workspace = true
hex.workspace = true
bytes.workspace = true
anyhow.workspace = true
tiny-keccak = "2.0.2"
num-bigint = { version = "0.4.4", features = [] }
quote = "1.0.33"
