[package]
name = "substreams-ethereum-uniswap-v2"
version = "0.1.0"
edition = "2024"

[lib]
name = "substreams_ethereum_uniswap_v2"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
ethabi.workspace = true
anyhow = { workspace = true, features = [] }
hex-literal.workspace = true
substreams-helper = { path = "../substreams-helper" }
num-bigint = "0.4.4"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow.workspace = true
substreams-ethereum.workspace = true
substreams-common = { path = "../common" }
